--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinemendes - Seu Cinema Virtual</title>
+    <title>CineMendes - Seu Cinema Virtual</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -245,7 +245,7 @@
                 
                 <div class="celebration">
                     <h3>🍿 Desejamos um excelente filme! 🎬</h3>
-                    <p>Aproveite sua sessão especial no Cinemendes!</p>
+                    <p>Aproveite sua sessão especial no CineMendes!</p>
                     <div class="movie-wishes">
                         <p>🌟 Que seja uma filminho incrível!</p>
                         <p>🎭 Divirta-se muito assistindo!</p>
